fix overflow on pwr scatterplot legend

--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,10 @@ button{
     text-align: center;
 }
 
+#mechanical-changes-overview {
+    overflow: visible;
+}
+
 #mc {
     padding: 20px;
 }
